--- a/week_3_Part2.ipynb
+++ b/week_3_Part2.ipynb
@@ -5,11 +5,11 @@
    "metadata": {},
    "source": [
     "# Coursera Capstone Project \n",
-    "# Week 3 Part 1\n",
+    "# Week 3 Part 2\n",
     "\n",
     "### by Sushant Thotakura\n",
     "\n",
-    "Scrapping data from the webpage and cleaning it and organizing it for further analysis"
+    "Adding the longitude and latitude data for the postal codes"
    ]
   },
   {
