--- a/week_3_Part2.ipynb
+++ b/week_3_Part2.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Coursera Capstone Project \n",
-    "# Week 3 Part 2\n",
+    "# Week 3 Part 1 and 2\n",
     "\n",
     "### by Sushant Thotakura\n",
     "\n",
